Progress Code 1.5, 2.8, 3.8, 4.8 - Fixed Website not showing Achievement

--- a/static/style.css
+++ b/static/style.css
@@ -167,3 +167,10 @@ button:hover {
 .toast.hidden {
     transform: translateY(200%);
 }
+
+#steamIdInput,
+#searchInput {
+    flex: 1;
+    width: 100%;
+    min-width: 0;
+}
